--- a/main.css
+++ b/main.css
@@ -56,26 +56,11 @@ form button { /*estilizando o botão ADICIONAR + */
     padding: 8px; /*espaçamento do botão para os campos do formulário */
 }
 
-table {
+ul {
     width: 100%; /*ocupação de espaço da tabela dentro da área da página */
     color: #000;
 }
 
-table th { /*estilizando a tabela */
-    border-bottom: 2px solid #000;
-    padding: 16px;
-    font-size: 24px;
-    font-weight: bold;
+li:active{
+    text-decoration: line-through;
 }
-
-table td {
-    padding: 16px 0; /* espaçamento da linha para o cabeçalho da tabela */
-    text-align: center; /* centralizando os itens da tabela no meio da coluna */
-    font-size: 18px;
-    border-bottom: 1px solid rgba(0,0,0,0.1); /*colocando uma linha separando as informações da tabela, utilizando a colocaração RGBA */
-}
-
-table td img { /* estilizando e arrumando a imagem dentro da tabela */
-    height: 30px;
-}
-
